--- a/accounting.html
+++ b/accounting.html
@@ -47,6 +47,30 @@
         nav ul li a:hover {
             background-color: #555;
         }
+        footer {
+    background-color: #f8f8f8;
+    padding: 20px;
+    text-align: center;
+    font-size: 14px;
+    color: #333;
+}
+
+.social-media a {
+    color: #007bff;
+    text-decoration: none;
+    margin-right: 10px;
+}
+
+.social-media a:hover {
+    text-decoration: underline;
+}
+
+@media (max-width: 768px) {
+    .social-media a {
+        display: block;
+        margin-bottom: 10px;
+    }
+}
     </style>
 </head>
 <body>
@@ -62,7 +86,7 @@
     </header>
     
     <main>
-      
+      <p>aaaaaaaaaaaaaaa</p>
     </main>
 
     <footer>
