--- a/index.html
+++ b/index.html
@@ -227,6 +227,14 @@ h5 {
         <section id="Add">
             
         </section>
+        <h1>Administration</h1>
+        <section id="Administration"></section>
+        <h1>Marketing</h1>
+        <section id="Marketing"></section>
+        <h1>Development</h1>
+        <section id="Development"></section>
+        <h1>Finance</h1>
+        <section id="Finance"></section>
     </main>
     
     <footer>
