--- a/index.html
+++ b/index.html
@@ -224,17 +224,25 @@ h5 {
             <button value="submit" id="myBtn">Submit</button>
         </form>
 
-        <section id="Add">
-            
-        </section>
         <h1>Administration</h1>
-        <section id="Administration"></section>
+        <section id="Administration">
+
+        </section>
         <h1>Marketing</h1>
-        <section id="Marketing"></section>
+        <section id="Marketing">
+
+
+        </section>
         <h1>Development</h1>
-        <section id="Development"></section>
+        <section id="Development">
+
+
+        </section>
         <h1>Finance</h1>
-        <section id="Finance"></section>
+        <section id="Finance">
+
+        </section>
+
     </main>
     
     <footer>
