--- a/index.html
+++ b/index.html
@@ -185,6 +185,19 @@ h5 {
   background-color: #412323b2; /* Darker Green */
 }
 
+
+/* Section styling */
+section {
+    display: flex; 
+    flex-wrap: wrap; 
+    flex: 0 0 calc(25% - 20px); /* Set flex basis to 25% minus margin */
+    background-color: #fff;
+    padding: 20px;
+    margin-bottom: 20px;
+    border-radius: 5px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
+
     </style>
 </head>
 <body>
